depmoyment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: dep
    labels:
        app: health-app
spec:
    replicas: 2
    selector:
        matchLabels:
            app: health-app
    template:
        metadata:
            labels:
                app: health-app
                app_name: health
        spec:
            containers:
                - name: health
                  image: otuslearning/dockers:0.0.1
                  livenessProbe:
                      httpGet:
                          path: /health/
                          port: 8000
                  readinessProbe:
                        httpGet:
                            path: /health/
                            port: 8000
