service.yml
apiVersion: v1
kind: Service
metadata:
    name: health-svc
    labels:
      app: health-app
spec:
    selector:
      app: health-app
    ports:
      - protocol: TCP
        port: 80
        targetPort: 8000
