ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /health/$2
  name: health-ing
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/(\w+)
            pathType: ImplementationSpecific
            backend:
              service:
                name: health-svc
                port:
                  number: 80
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: health-svc
                port:
                  number: 80
